--- a/app/src/main/res/menu/map.xml
+++ b/app/src/main/res/menu/map.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/item_menu_search"
-        android:title="@string/item_menu_search"
-        android:icon="@drawable/ic_menu_search"
-        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/item_menu_off_app"
         android:title="@string/item_menu_off_app" />
