--- a/app/src/main/res/layout/row_type_map.xml
+++ b/app/src/main/res/layout/row_type_map.xml
@@ -15,6 +15,7 @@
         <ImageView
             android:id="@+id/image_row_type_map"
             android:layout_margin="15dp"
+            android:scaleType="center"
             android:layout_width="match_parent"
             android:layout_height="150dp" />
         <TextView
