--- a/app/src/main/res/layout-land/row_type_map.xml
+++ b/app/src/main/res/layout-land/row_type_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
@@ -12,7 +12,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/card_image_round"
             app:cardCornerRadius="15dp"
             android:layout_margin="15dp"
@@ -23,7 +23,7 @@
                 android:scaleType="center"
                 android:layout_width="match_parent"
                 android:layout_height="250dp" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
         <TextView
             android:id="@+id/text_row_type_map"
             android:layout_below="@id/card_image_round"
@@ -34,4 +34,4 @@
             android:layout_height="wrap_content" />
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
