--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#607D8B</color>
-    <color name="colorPrimaryDark">#455A64</color>
-    <color name="colorAccent">#009688</color>
-    <color name="colorWhite">#fff</color>
-    <color name="colorDark">#3A3939</color>
-    <color name="colorRed">#DD2C00</color>
+    <!-- Default Colors -->
+    <color name="colorPrimary">#546E7A</color>
+    <color name="colorPrimaryDark">#29434E</color>
+    <color name="colorAccent">#819CA9</color>
+
+    <!-- Other Colors -->
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorRed">#D32F2F</color>
 
 </resources>
